<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"

    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/todo"
    android:orientation="vertical">

  <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      android:orientation="vertical"
      tools:ignore="UselessParent">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="125dp"
        android:layout_marginBottom="10dp"
        android:text="@string/login"
        android:textColor="#289BE8"
        android:textSize="50sp"
        app:fontFamily="@font/carter_one"
        android:layout_marginStart="125dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="100dp"
        android:layout_marginBottom="20dp"
        android:text="@string/tag"

        android:textColor="#F8F8F8"
        android:textSize="12sp"
        app:fontFamily="@font/chonburi"
        android:layout_marginStart="100dp" />



      <EditText
          android:id="@+id/et_email"
          android:layout_width="match_parent"
          android:layout_height="50dp"
          android:drawableLeft="@drawable/ic_email_black_24dp"
          android:layout_marginLeft="20dp"
          android:layout_marginRight="20dp"
          android:background="@drawable/et_custom"
          android:hint="@string/e_mail"

          android:inputType="textEmailAddress"
          android:padding="15dp"
          android:textSize="15sp"
          android:drawableStart="@drawable/ic_email_black_24dp" />


      <EditText
          android:id="@+id/et_password"
          android:layout_width="match_parent"
          android:layout_height="50dp"
          android:layout_marginLeft="20dp"
          android:layout_marginTop="10dp"
          android:layout_marginRight="20dp"
          android:background="@drawable/et_custom"
          android:drawableLeft="@drawable/ic_vpn_key_black_24dp"
          android:hint="@string/password"
          android:inputType="textPassword"
          android:padding="15dp"
          android:textSize="15sp"
          android:drawableStart="@drawable/ic_vpn_key_black_24dp" />

    <Button
        android:id="@+id/btn_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="15dp"
        android:layout_marginRight="20dp"
        android:background="@drawable/btn_custom"

        android:text="@string/login"
        android:textColor="@android:color/white" />

    <Button
        android:id="@+id/btn_register"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="15dp"
        android:layout_marginRight="20dp"
        android:background="#388E3C"
        android:text="@string/register"
        android:textColor="@android:color/white" />
  </LinearLayout>
</RelativeLayout>