<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"

    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/todo"
    >
    <LinearLayout
        android:layout_width="400dp"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tv_logo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="105dp"
            android:layout_marginBottom="10dp"
            android:text="Register"
            android:textColor="#09D50C"
            android:textSize="50sp"
            app:fontFamily="@font/carter_one" />

        <TextView
            android:id="@+id/tv_subtitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@id/et_email"
            android:layout_marginLeft="120dp"
            android:layout_marginBottom="20dp"
            android:text="@string/tag"

            android:textColor="#F8F8F8"
            android:textSize="12sp"
            app:fontFamily="@font/chonburi" />



        <EditText
            android:id="@+id/et_name"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/et_custom"
            android:hint="@string/your_name"
            android:inputType="textPersonName"
            android:drawableLeft="@drawable/ic_person_black_24dp"
            android:padding="15dp"
            android:textSize="15sp" />

        <EditText
            android:id="@+id/et_email"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="10dp"
            android:src="@drawable/ic_email_black_24dp"
            android:background="@drawable/et_custom"

            android:hint="@string/e_mail"
            android:drawableLeft="@drawable/ic_email_black_24dp"
            android:inputType="textEmailAddress"
            android:padding="15dp"
            android:textSize="15sp" />

        <EditText
            android:id="@+id/et_password"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/et_custom"
            android:hint="@string/password"
            android:drawableLeft="@drawable/ic_vpn_key_black_24dp"
            android:inputType="textPassword"
            android:padding="15dp"
            android:textSize="15sp" />

        <EditText
            android:id="@+id/et_password1"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/et_custom"
            android:hint="@string/password1"
            android:drawableLeft="@drawable/ic_vpn_key_black_24dp"
            android:inputType="textPassword"
            android:padding="15dp"
            android:textSize="15sp" />


        <Button
            android:id="@+id/btn_register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"

            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="30dp"
            android:background="#388E3C"
            android:text="@string/register"
            android:textColor="@android:color/white" />

        <TextView
            android:id="@+id/textViewLogin"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="90dp"
            android:layout_marginTop="0dp"
            android:fontFamily="sans-serif"
            android:text="Already Have an Account?  Sign in"
            android:textAllCaps="true"
            android:textColor="#D51010"
            android:textSize="13dp"
            android:textStyle="bold" />

    </LinearLayout>
</ScrollView>